test-policies-pass/validating/conditional-policy/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: conditional-policy-binding
spec:
  policyName: conditional-policy
  validationActions: [Deny]
