test-policies-pass/validating/conditional-policy/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: conditional-policy
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["deployments"]
  matchConditions:
  # namespaceObject is not available to match conditions; use the request.
  - name: 'only-production'
    expression: "request.namespace == 'production'"
  validations:
  - expression: "object.spec.replicas >= 3"
    message: "Production deployments must have at least 3 replicas"
    reason: Invalid
